--- a/App.config
+++ b/App.config
@@ -3,7 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-		<add name="234" connectionString="Database=u0550310_aeroblock; Server=31.31.196.234; port=3306; username=u0550310_kornev; password=18061981Kornev; charset=utf8" providerName="MySql.Data.MySqlClient" />
+		<add name="234" connectionString="Database=u0550310_aeroblock; server=127.0.0.1; uid=root; pwd=12345;"/>
+		<add name="235" connectionString="Database=u0550310_aeroblock; Server=31.31.196.234; port=3306; username=u0550310_kornev; password=18061981Kornev; charset=utf8" providerName="MySql.Data.MySqlClient" />
         <add name="rail.Properties.Settings.dfgConnectionString" connectionString="server=localhost;user id=root;password=12345;persistsecurityinfo=True;database=dfg" providerName="MySql.Data.MySqlClient" />
         <add name="rail.Properties.Settings.dfgConnectionString1" connectionString="server=localhost;user id=root;password=12345;database=dfg" providerName="MySql.Data.MySqlClient" />
         <add name="rail.Properties.Settings.dfgConnectionString2" connectionString="server=localhost;user id=root;password=12345;persistsecurityinfo=True;database=dfg;allowuservariables=True" providerName="MySql.Data.MySqlClient" />
