--- a/rail.csproj
+++ b/rail.csproj
@@ -196,6 +196,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClasses1.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Models\Adres.cs" />
+    <Compile Include="Models\GrouBoxS.cs" />
     <Compile Include="move_silo.cs">
       <SubType>Form</SubType>
     </Compile>
