--- a/rail.csproj
+++ b/rail.csproj
@@ -196,6 +196,7 @@
     </Compile>
     <Compile Include="Models\Adres.cs" />
     <Compile Include="Models\GrouBoxS.cs" />
+    <Compile Include="Models\Transfer.cs" />
     <Compile Include="move_silo.cs">
       <SubType>Form</SubType>
     </Compile>
