--- a/rail.csproj
+++ b/rail.csproj
@@ -195,6 +195,7 @@
       <DependentUpon>DataClasses1.dbml</DependentUpon>
     </Compile>
     <Compile Include="Models\Adres.cs" />
+    <Compile Include="Models\Error\ErrorUpdateMoveMas.cs" />
     <Compile Include="Models\GrouBoxS.cs" />
     <Compile Include="Models\LogFileManager.cs" />
     <Compile Include="Models\PLCIPAdress.cs" />
